--- a/src/apps/copo_sample/static/copo/css/copo/sample.css
+++ b/src/apps/copo_sample/static/copo/css/copo/sample.css
@@ -1,3 +1,42 @@
+/* Table CSS styles */
+th {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 2;
+}
+
+.confirm {
+    border: 1px solid rgba(221, 221, 221, 0.95);
+    border-radius: 11px;
+    padding: 10px;
+    width: 400px;
+    margin-bottom: 20px;
+}
+
+#image_table img {
+    height: 100px
+}
+
+.cell_highlight_in_column {
+    background-color: #e0e1e2 !important;
+}
+
+.cell_updated {
+    background-color: #1678c2 !important;
+    color: white !important;
+}
+
+.cell_accepted {
+    background-color: #16ab39 !important;
+    color: white !important
+}
+
+.cell_tentative {
+    background-color: #eaae00 !important;
+    color: white !important;
+}
+
 .sample_attributes_div > div {
     margin: 5px;
 }
@@ -14,4 +53,143 @@ hr {
     z-index: 10;
     margin-left: -170px;
     margin-top: 0px
+}
+
+/* CSS styles for the 'sample_info' content */
+.sample-alert {
+    display: none;
+    margin-top: 30px;
+    padding: 15px;
+    font-family: "Courier";
+    font-size: 15px;
+    width: fit-content;
+    overflow: hidden;
+}
+
+/* Information messages */
+
+.sample-alert-info {
+    /* The typewriter cursor effect */
+    border-right: .15em solid orange;
+    animation: type 1s steps(22), blink .5s step-end infinite;
+    width: fit-content;
+    font-size: 18px;
+    /* font-weight: bold; */
+    padding: 5px;
+}
+
+/* Error messages */
+.sample-alert-error {
+    color: #b94a48;
+    animation: none;
+    width: fit-content;
+    border: none;
+    /* Apply scroll view to the warning message if it exceeds the max-height */
+    max-height: 300px;
+    overflow: scroll;
+}
+
+.sample-alert-error>h2 {
+    width: fit-content;
+    color: black;
+    background-color: #f5c6cb;
+}
+
+.sample-alert-error>ol>li>strong {
+    text-decoration: underline;
+}
+
+.sample-alert-error>ol>li {
+    font-weight: bold;
+}
+
+#warning_info {
+    /* Apply scroll view to the warning message if it exceeds the max-height */
+    max-height: 180px;
+    overflow: scroll;
+}
+
+
+#warning_info2 {
+    /* Apply scroll view to the warning message if it exceeds the max-height */
+    max-height: 200px;
+    overflow: scroll;
+}
+
+#warning_info3 {
+    border-top: 2px dotted black;
+    /* Apply scroll view to the warning message if it exceeds the max-height */
+    max-height: 200px;
+    overflow: scroll;
+}
+
+/* Warning messages */
+.sample-alert-warning {
+    font-weight: bold;
+    animation: none;
+    width: fit-content;
+    border-right: none;
+}
+
+.sample-alert-warning>h2 {
+    background-color: #fcf8e3;
+    animation: none;
+    width: fit-content;
+}
+
+#warning_info3>ul {
+    margin-left: -25px;
+}
+
+#warning_info3 ul>li {
+    font-weight: bold;
+}
+
+#warning_info>strong,
+#warning_info2>strong,
+#warning_info3>ul>li>ul>li>strong,
+#warning_info3>ul>li>strong {
+    text-decoration: underline;
+}
+
+/* Successful messages */
+
+.sample-alert-success {
+    width: fit-content;
+    font-weight: 600;
+    animation: none;
+    border: none;
+}
+
+/* The typing effect for the '.sample-alert' CSS class  */
+@keyframes type {
+    from {
+        width: 0
+    }
+
+    0% {
+        width: 0;
+    }
+
+    99.9% {
+        border-right: .15em solid orange;
+    }
+
+    100% {
+        border: none;
+        animation: none
+    }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink {
+    50% {
+        border-color: transparent;
+    }
+}
+
+@-webkit-keyframes blink {
+    50% {
+        border-color: transparent;
+    }
 }
