Changed css class name

--- a/src/apps/copo_dtol_submission/templates/copo/copo_sample_accept_reject.html
+++ b/src/apps/copo_dtol_submission/templates/copo/copo_sample_accept_reject.html
@@ -69,7 +69,7 @@
         </div>
     </div>
 
-    <hr class="hr-margin-top"/>
+    <hr class="hr_margin_top"/>
 
     <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-3">
