--- a/src/apps/copo_profile/templates/copo/profile/copo_profile_record.html
+++ b/src/apps/copo_profile/templates/copo/profile/copo_profile_record.html
@@ -101,6 +101,7 @@
                                         <a class="item action" profile_component="erga" anchor_type="sample" data-action_type="sample">Submit ERGA Manifest</a>                            
                                         <a class="item action" profile_component="all" anchor_type="reads" data-action_type="read">Submit Reads</a>
                                         <a class="item action" profile_component="all" anchor_type="files" data-action_type="files">Upload Files</a>
+                                        <a class="item action" profile_component="all" anchor_type="sample" data-action_type="accessions">View Accessions</a>
                                         <a class="item action ui divider" profile_component="all" anchor_type="all" data-action_type="release_study" style="margin: 1em 0;">Release Study</a>
                                     </div>
                                 </div>
