--- a/src/apps/copo_landing_page/templates/nav_dropdown.html
+++ b/src/apps/copo_landing_page/templates/nav_dropdown.html
@@ -20,7 +20,7 @@
                     <ul class="dropdown-menu">
                         <li role="presentation"><a href="/copo/tol_dashboard/stats">Statistics</a></li>
                         <li role="presentation"><a href="/copo/tol_dashboard/tol">Tree of Life Dashboard</a></li>
-                        <li role="presentation"><a href="/copo/copo_accessions/dashboard">Accessions' Dashboard</a></li>
+                        <li role="presentation"><a href="/copo/copo_accessions/dashboard">Accessions Dashboard</a></li>
                     </ul>
                 </li>
                 <li role="presentation"><a href="/about">About</a></li>
