--- a/src/apps/copo_tol_dashboard/templates/tol_dashboard/copo_tol_inspect_gal.html
+++ b/src/apps/copo_tol_dashboard/templates/tol_dashboard/copo_tol_inspect_gal.html
@@ -46,7 +46,7 @@
                     <i class="icon chart line"></i>
                 </button>
                 <button id="copo_accessions_dashboard_shortcut"
-                        title="View COPO Accessions' Dashboard"
+                        title="View Accessions Dashboard"
                         class="big circular ui icon pink button copo_accessions copo-tooltip">
                     <i class="icon sitemap"></i>
                 </button>
