--- a/static/assets/css/base_styles.css
+++ b/static/assets/css/base_styles.css
@@ -128,6 +128,7 @@ body {
     font-weight: bold;
     color: black !important;
     font-size: 14px !important;
+    text-align: left;
 }
 
 .navbar-inverse .dropdown-menu{
@@ -145,6 +146,7 @@ body {
     font-weight: bold;
     color: white !important;
     font-size: 14px !important;
+    text-align: left;
 }
 
 #copo-icon {
