--- a/src/apps/copo_core/templates/copo/component_cookie_modal.html
+++ b/src/apps/copo_core/templates/copo/component_cookie_modal.html
@@ -14,6 +14,17 @@
         font-size: 18px;
     }
 
+    #emailModalHeader{
+        background-color: #f0ad4e;
+    }
+
+    #emailModalTitle {
+        color: white;
+        font-size: 16px;
+        font-weight: bold;
+        text-align: left;
+    }
+
     #acceptCookies,
     #rejectCookies {
         font-size: 16px;
@@ -52,7 +63,7 @@
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div id="emailModalHeader" class="modal-header">
-                <h5 id="emailModalTitle" class="modal-title">Privacy & Transparency</h5>
+                <h5 id="emailModalTitle" class="modal-title">Add Email Address</h5>
             </div>
             <div id="emailModalBody" class="modal-body">
                 <div style="margin-bottom: 10px;"><b>An email address is required for your user account</b></div>
@@ -62,15 +73,12 @@
                 <label class="form-check-label" for="gdpr_check">&ensp; I Agree</label>
             </div>
             <div class="modal-footer">
-                <button id="submit" type="button" class="btn-custom3" data-dismiss="modal">Submit</button>
+                <button id="submit" type="button" class="btn btn-custom3" data-dismiss="modal">Submit</button>
             </div>
         </div>
     </div>
 </div>
 <!-- End of Email modal -->
-
-
-
  
 <script>
     $(document).ready(function () {
@@ -94,8 +102,6 @@
         $('#acceptCookies').on('click', function () {
             setCookie('cookiesAccepted', 'true', 365);
             recordCookieResponse(true);
-            // Check if user email address has been provided
-            //isUserEmailAddressProvided();
         });
 
         $('#rejectCookies').on('click', function () {
@@ -136,7 +142,7 @@
             url: '/cookie_response/',
             method: 'POST',
             data: {
-                cookie_response: is_accepted //getCookie('cookiesAccepted'),
+                cookie_response: is_accepted
             },
         }).done(function () {
             isUserEmailAddressProvided();
