Displayed COPO logo in black

--- a/src/apps/copo_core/templates/copo/socialaccount/authentication_error.html
+++ b/src/apps/copo_core/templates/copo/socialaccount/authentication_error.html
@@ -24,6 +24,12 @@
 
 {% block title_block %} ORCID Authentication Error {% endblock %}
 
+{% block image_div %}
+<div class="text-center" style="padding:50px">
+    <img src="{% static 'assets/img/COPO-logo-full-CMYK-black.png' %}" height="200px">
+</div>
+{% endblock image_div%}
+
 {% block content %}
     <div class="wrapper">
         <div class="text-center">
