Revised top navigation bar

--- a/src/apps/copo_core/templates/copo/base.html
+++ b/src/apps/copo_core/templates/copo/base.html
@@ -268,39 +268,40 @@
                     <span><i class="fa fa-bell" aria-hidden="true"></i></span>
                 </a>
             </li>
-            <li class="dropdown" title="Analytics">
-                <a href="#" class="dropdown-toggle " data-toggle="dropdown" role="button" aria-haspopup="true"
+            <li class="nav-item dropdown" title="Analytics" role="presentation">
+                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-haspopup="true"
                     aria-expanded="false">
                    <i class="fa fa-chart-line" aria-hidden="true"></i>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-                        <li>
-                            <a href="/copo/tol_dashboard/stats" target="_parent">
-                                <div class="custom-nav-items">
-                                    <i class="fa fa-bar-chart" aria-hidden="true"></i>
-                                    <span class="icon_text"> Statistics</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/copo/tol_dashboard/tol" target="_parent">
-                                <div class="custom-nav-items">
-                                    <i class="fa fa-chart-pie" aria-hidden="true"></i>
-                                    <span class="icon_text">Tree of Life Dashboard</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/copo/copo_accessions/dashboard" target="_parent">
-                                <div class="custom-nav-items">
-                                    <i class="fa fa-sitemap" aria-hidden="true"></i>
-                                    <span class="icon_text">Accessions Dashboard</span>                                   
-                                </div>
-                            </a>
-                        </li>
-                    </ul>
                 </a>
+                <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
+                    <li>
+                        <a class="dropdown-item" href="/copo/tol_dashboard/stats" target="_parent" role="menuitem" tabindex="-1">
+                            <div class="custom-nav-items">
+                                <i class="fa fa-bar-chart" aria-hidden="true"></i>
+                                <span class="icon_text"> Statistics</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="/copo/tol_dashboard/tol" target="_parent" role="menuitem" tabindex="-1">
+                            <div class="custom-nav-items">
+                                <i class="fa fa-chart-pie" aria-hidden="true"></i>
+                                <span class="icon_text">Tree of Life Dashboard</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="/copo/copo_accessions/dashboard" target="_parent" role="menuitem" tabindex="-1">
+                            <div class="custom-nav-items">
+                                <i class="fa fa-sitemap" aria-hidden="true"></i>
+                                <span class="icon_text">Accessions Dashboard</span>                                   
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+                
             </li>
-            <li class="dropdown" style="margin-left: 15px;" title="Documentation">
+            <li class="nav-item" style="margin-left: 15px;" title="Documentation">
                 <a id="copo-documentation" href="https://copo-docs.readthedocs.io/en/latest/" target="_blank">
                     <span data-copo-tour-id="documentation_button">
                         <i class="fa fa-book" aria-hidden="true"></i>
