--- a/src/apps/copo_core/templates/copo/base.html
+++ b/src/apps/copo_core/templates/copo/base.html
@@ -269,7 +269,7 @@
                 </a>
             </li>
             <li class="nav-item dropdown" title="Analytics" role="presentation">
-                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-haspopup="true"
+                <a href="#" class="nav-link dropdown-toggle pe-xl-2" data-bs-toggle="dropdown" role="button" aria-haspopup="true"
                     aria-expanded="false">
                    <i class="fa fa-chart-line" aria-hidden="true"></i>
                 </a>
