--- a/src/apps/copo_profile/static/copo_profile/css/copo_profile_index.css
+++ b/src/apps/copo_profile/static/copo_profile/css/copo_profile_index.css
@@ -23,6 +23,7 @@
 }
 .btn.dropdown-toggle {
     padding: .92857143em 1.14285714em;
+    border-color: #e9ecef !important;
 }
 
 .btn.dropdown-toggle:hover {
